--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "node build/dev-server.js",
     "start": "node build/dev-server.js",
     "build": "node build/build.js",
-    "lint": "eslint --ext .js,.vue src"
+    "lint": "eslint --fix --ext .js,.vue src"
   },
   "dependencies": {
     "mpvue": "^1.0.11",
@@ -49,6 +49,7 @@
     "mpvue-loader": "^1.0.13",
     "mpvue-template-compiler": "^1.0.13",
     "mpvue-webpack-target": "^1.0.0",
+    "node-sass": "^4.9.3",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^2.0.0",
     "portfinder": "^1.0.13",
@@ -57,6 +58,7 @@
     "prettier": "~1.12.1",
     "px2rpx-loader": "^0.1.10",
     "rimraf": "^2.6.0",
+    "sass-loader": "^7.1.0",
     "semver": "^5.3.0",
     "shelljs": "^0.8.1",
     "uglifyjs-webpack-plugin": "^1.2.5",
